--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.0",
     "@nestjs/swagger": "^11.1.5",
+    "@nestjs/websockets": "^11.1.0",
     "@prisma/client": "^6.6.0",
     "bcrypt": "^5.1.1",
     "passport": "^0.7.0",
